deploy/development/kube1.alahd.kz.test.bash.kz/deploy_default.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kolesa-development
  name: go-course-${DEPLOY_BRANCH}
  labels:
    org.kolesa-team.deploy.branch: ${DEPLOY_BRANCH}
    org.kolesa-team.deploy.release: release-${DEPLOY_RELEASE}
    org.kolesa-team.deploy.version: "${DEPLOY_VERSION}"
    org.kolesa-team.service.entity: default
    org.kolesa-team.service.environment: development
    org.kolesa-team.service.name: go-course-${DEPLOY_BRANCH}
    org.kolesa-team.service.project: kolesa
spec:
  progressDeadlineSeconds: 180
  replicas: 1
  selector:
    matchLabels:
      org.kolesa-team.deploy.branch: ${DEPLOY_BRANCH}
      org.kolesa-team.service.entity: default
      org.kolesa-team.service.environment: development
      org.kolesa-team.service.name: go-course-${DEPLOY_BRANCH}
      org.kolesa-team.service.project: kolesa
  template:
    metadata:
      labels:
        org.kolesa-team.deploy.branch: ${DEPLOY_BRANCH}
        org.kolesa-team.service.entity: default
        org.kolesa-team.service.environment: development
        org.kolesa-team.service.name: go-course-${DEPLOY_BRANCH}
        org.kolesa-team.service.project: go-course
    spec:
      containers:
        - name: go-course
          image: ${DEPLOY_IMAGE}
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 15
            tcpSocket:
              port: 8080
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              cpu: "0.2"
              memory: 64Mi
            requests:
              cpu: "0.1"
              memory: 32Mi
