deploy/development/kube1.alahd.kz.test.bash.kz/svc_default.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: kolesa-development
  name: go-course-${DEPLOY_BRANCH}
  labels:
    org.kolesa-team.service.project: kolesa
    org.kolesa-team.service.name: go-course
    org.kolesa-team.service.entity: default
    org.kolesa-team.service.environment: development
    org.kolesa-team.deploy.branch: ${DEPLOY_BRANCH}
spec:
  ports:
    - port: 8080
  selector:
    org.kolesa-team.deploy.branch: "${DEPLOY_BRANCH}"
    org.kolesa-team.service.entity: default
    org.kolesa-team.service.environment: development
    org.kolesa-team.service.name: go-course-${DEPLOY_BRANCH}
    org.kolesa-team.service.project: kolesa
  type: NodePort
